kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
    - port: 8080
      targetPort: api-port
      protocol: TCP
      name: api-port
  selector:
    app: api
  type: NodePort
  externalTrafficPolicy: Local
